--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -142,6 +142,12 @@ Delta: \textcolor{green}{+3} / 0, Churn: \textcolor{green}{+7} / \textcolor{red}
   \end{multicols}}
 
 \lnQuote
+  [Georgios Gousios]
+  {georgios-gousios}
+  {We examined 291 carefully selected Ruby, Python, Java and Scala projects (in total, 166,884 pull requests)... The number of \ul{total lines} changed by pull requests is on average less than 500 (95\% percentile: \textbf{1227}, 90\% percentile: 497, 80\% percentile: 168) with a median number of 20.}
+  {gousios2014exploratory}
+
+\lnQuote
   [Rudolf Ferenc]
   {rudolf-ferenc}
   {We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}
