--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -188,16 +188,22 @@ void main(int x) {
   \lnSource{jaspan2018advantages}}
 
 \lnQuote
-  [Rachel Potvin]
-  {rachel-potvin}
-  {The \textcolor{orange}{Google} codebase includes approximately \ul{one billion files} and has a history of approximately 35 million commits spanning Google's entire 18-year existence. The repository contains \ul{86TBa} of data, including approximately \ul{two billion lines of code} in nine million unique source files.}
-  {potvin2016}
+  [James Whittaker]
+  {james-whittaker}
+  {Most code at Google shares a \ul{single} repository and common tool chain.}
+  {whittaker2012google}
 
 \lnQuote
   [Durham Goode]
   {durham-goode}
   {\textcolor{orange}{Facebook}'s main source repository is enormous---many times larger than even the Linux kernel, which checked in at \ul{17 million lines of code} and \ul{44,000 files} in 2013.}
   {goode2014}
+
+\lnQuote
+  [Rachel Potvin]
+  {rachel-potvin}
+  {The \textcolor{orange}{Google} codebase includes approximately \ul{one billion files} and has a history of approximately 35 million commits spanning Google's entire 18-year existence. The repository contains \ul{86TBa} of data, including approximately \ul{two billion lines of code} in nine million unique source files.}
+  {potvin2016}
 
 \lnQuote
   [Tomas Votruba]
