--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -190,7 +190,7 @@ void main(int x) {
 \lnQuote
   [James Whittaker]
   {james-whittaker}
-  {Most code at Google shares a \ul{single} repository and common tool chain.}
+  {Most code at Google shares a \ul{single} repository and common tool chain. This single repository makes a great deal of sense as engineers moving from project to project have little to \ul{relearn}.}
   {whittaker2012google}
 
 \lnQuote
