--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -194,6 +194,12 @@ void main(int x) {
   {whittaker2012google}
 
 \lnQuote
+  [John Penix]
+  {john-penix}
+  {Software development at Google happens quickly and at scale. The Google codebase receives over \ul{20 changes per minute} and 50 percent of the files change every month!}
+  {whittaker2012google}
+
+\lnQuote
   [Durham Goode]
   {durham-goode}
   {\textcolor{orange}{Facebook}'s main source repository is enormous---many times larger than even the Linux kernel, which checked in at \ul{17 million lines of code} and \ul{44,000 files} in 2013.}
