--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -126,7 +126,14 @@ assert foo(50) == 42;
 \lnQuote
   [William Robert Elmendorf]
   {william-elmendorf}
-  {A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \ul{variations} eligible for testing; 3) rank and subset the \ul{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \ul{test coverage} of the test case library; and 5) verify attainment of the \ul{planned} test coverage.}
+  {A disciplined test control process is composed of five steps:
+  \begin{inparaenum}[1)]
+    \item establish the intended extent of testing;
+    \item create a list of functional \ul{variations} eligible for testing;
+    \item rank and subset the \ul{eligible} variations so that test resources can be directed at those with the higher payoff;
+    \item calculate the \ul{test coverage} of the test case library; and
+    \item verify attainment of the \ul{planned} test coverage.
+  \end{inparaenum}}
   {elmendorf1969}
 
 \lnQuote
