--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -319,6 +319,12 @@ int fibonacci(int n) {
   {PMT applies ML to build a predictive model by collecting a series of easy-to-access features (e.g., coverage and mutation operator) on already executed mutants of earlier versions of the project. Based on this model, PMT \ul{predicts} the mutation testing results (i.e., whether each mutant is killed or not) of a new version of project without executing its mutants at all.}
   {zhang2016}
 
+\lnQuote
+  [Ren{\'e} Just]
+  {rene-just}
+  {Our experiments used 357 real faults in 5 open-source applications that comprise a total of 321,000 lines of code. The results show a statistically \ul{significant} correlation between mutant detection and real fault detection, independently of code coverage.}
+  {just2014mutants}
+
 \lnPitch{Mutation Coverage can be calculated by a few tools:
 \begin{itemize}
 \item \href{https://pitest.org/}{PIT} for Java
