--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -71,7 +71,7 @@ int fibonacci(int n) {
 assert fibonacci(2) == 1;
 assert fibonacci(9) == 34;
 (*@\textcolor{orange}{// assert fibonacci(10) == 55;}@*)
-\end{ffcode*}
+\end{ffcode}
 }
 \par\columnbreak\par
 Commit \#3:\par
