--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -95,7 +95,7 @@ assert fibonacci(10) == 55;
 \plush{
 \pptBanner{Break-and-Fix Cycle}
 \includegraphics[width=.7\textwidth]{time-and-mess-diagram.png}\par
-{\scriptsize Source: \url{https://www.yegor256.com/2014/04/12/puzzle-driven-development-by-roles.html}\par}}
+\lnSource{bugayenko2014blog0412}}
 
 \plush{
 \pptBanner{\texttt{www.0pdd.com}}
@@ -129,15 +129,8 @@ assert fibonacci(10) == 55;
 \lnQuote
   [Giancarlo Succi]
   {giancarlo-succi}
-  {This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization to optimize a linear model with various preprocessing methods to determine the optimal model
+  {This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization (PSO) to optimize a linear model with various preprocessing methods to determine the optimal model
 for task prioritization within a backlog.}
   {bugayenko2023}
-
-\plush{
-  \pptBanner{Read this:}\par
-  \href{https://www.yegor256.com/2010/03/04/pdd.html}{Puzzle Driven Development} (2010) \par
-  \href{https://www.yegor256.com/2014/04/12/puzzle-driven-development-by-roles.html}{PDD by Roles} (2014) \par
-  \href{https://www.yegor256.com/2017/04/05/pdd-in-action.html}{PDD in Action} (2017) \par
-}
 
 \end{document}
