--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -33,6 +33,12 @@
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}
   {cunningham1992}
 
+\lnQuote
+  [Mark Seemann]
+  {mark-seemann}
+  {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
+  {seemann2021code}
+
 \pptBanner{Puzzle Driven Development: Motivating Example}
 \begin{pptWide}{3}
 Commit \#1:\par
