--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -34,10 +34,22 @@
   {cunningham1992}
 
 \lnQuote
+  [Martin Fowler]
+  {martin-fowler}
+  {You can bear some interest payments, but if the payments become too great, you will be overwhelmed. It is important to manage your debt, paying parts of it off by means of \ul{refactoring}.}
+  {fowler1999refactoring}
+
+\lnQuote
   [Mark Seemann]
   {mark-seemann}
   {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
   {seemann2021code}
+
+\lnQuote
+  [Eric Allman]
+  {eric-allman}
+  {Technical debt is inevitable. the issue is not eliminating debt, but rather managing it. When a project starts, the team almost never has a full grasp on the totality of the problem.}
+  {allman2012managing}
 
 \pptBanner{Puzzle Driven Development: Motivating Example}
 \begin{pptWide}{3}
