--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -40,10 +40,18 @@
   {fowler1999refactoring}
 
 \lnQuote
+  [Emad Shihab]
+  {emad-shihab}
+  {We find that developers with higher experience tend to introduce most of the \ul{self-admitted} technical debt and that time pressures and complexity of the code do not correlate with the amount of self-admitted technical debt.}
+  {potdar2014exploratory}
+
+\lnQuote
   [Mark Seemann]
   {mark-seemann}
   {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
   {seemann2021code}
+
+\lnThought{Now, the Puzzle Driven Development!}
 
 \lnQuote
   [Eric Allman]
