--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -46,6 +46,12 @@
   {potdar2014exploratory}
 
 \lnQuote
+  [Gabriele Bavota]
+  {gabriele-bavota}
+  {This 57\% of fixed instances shows a very long survivability, by staying in the system for \ul{over 1,000 commits}, on average.}
+  {bavota2016large}
+
+\lnQuote
   [Mark Seemann]
   {mark-seemann}
   {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
