--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -48,7 +48,7 @@
 \lnQuote
   [Gabriele Bavota]
   {gabriele-bavota}
-  {This 57\% of fixed instances shows a very long survivability, by staying in the system for \ul{over 1,000 commits}, on average.}
+  {57\% of fixed instances shows a very long survivability, by staying in the system for \ul{over 1,000 commits}, on average.}
   {bavota2016large}
 
 \lnQuote
