--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -52,6 +52,12 @@
   {bavota2016large}
 
 \lnQuote
+  [Terese Besker]
+  {terese-besker}
+  {Our results indicate that technical debt reduces developers' \ul{morale} since it hinders them from performing their development tasks, making progress, and achieving their goals.}
+  {besker2020influence}
+
+\lnQuote
   [Mark Seemann]
   {mark-seemann}
   {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
