--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -42,7 +42,7 @@
 \lnQuote
   [Emad Shihab]
   {emad-shihab}
-  {We find that developers with higher experience tend to introduce most of the \ul{self-admitted} technical debt and that time pressures and complexity of the code do not correlate with the amount of self-admitted technical debt.}
+  {We find that developers with higher experience tend to introduce most of the \ul{self-admitted} technical debt (SATD) and that time pressures and complexity of the code do not correlate with the amount of self-admitted technical debt.}
   {potdar2014exploratory}
 
 \lnQuote
@@ -56,6 +56,12 @@
   {terese-besker}
   {Our results indicate that technical debt reduces developers' \ul{morale} since it hinders them from performing their development tasks, making progress, and achieving their goals.}
   {besker2020influence}
+
+\lnQuote
+  [Paris Avgeriou]
+  {paris-avgeriou}
+  {There is no commonly agreed on and validated set of rules and metrics for measuring technical debt. Instead, each tool uses its own set of rules and metrics without detailed explanation or motivation.}
+  {avgeriou2020overview}
 
 \lnQuote
   [Mark Seemann]
