--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -33,11 +33,21 @@
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}
   {cunningham1992}
 
+\lnThought{Technical debt hurts}
+
 \lnQuote
   [Martin Fowler]
   {martin-fowler}
   {You can bear some interest payments, but if the payments become too great, you will be overwhelmed. It is important to manage your debt, paying parts of it off by means of \ul{refactoring}.}
   {fowler1999refactoring}
+
+\lnQuote
+  [Mark Seemann]
+  {mark-seemann}
+  {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
+  {seemann2021code}
+
+\lnThought{Scientifically, it's proven too}
 
 \lnQuote
   [Emad Shihab]
@@ -64,10 +74,10 @@
   {avgeriou2020overview}
 
 \lnQuote
-  [Mark Seemann]
-  {mark-seemann}
-  {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
-  {seemann2021code}
+  [Yutaro Kashiwa]
+  {yutaro-kashiwa}
+  {We found that changes involving SATD are 6–7\% less likely to be accepted by reviews than those not involving SATD. About 28–48\% of SATD comments are introduced during reviewing. We found that 20\% of SATD comments are introduced due to reviewer request.}
+  {kashiwa2022empirical}
 
 \lnThought{Now, the Puzzle Driven Development!}
 
