--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -180,6 +180,8 @@ assert fibonacci(10) == 55;
 \includegraphics[width=.6\textwidth]{ticket.png}\par
 {\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
 
+\lnThought{Next, we AI to help us manage long backlog with puzzles}
+
 \lnQuote
   [Giancarlo Succi]
   {giancarlo-succi}
