--- a/00-syllabus/00-syllabus.tex
+++ b/00-syllabus/00-syllabus.tex
@@ -43,7 +43,7 @@
 
 \newcommand\angry[1]{\textcolor{red}{#1}}
 
-\iexec[quiet,log]{wget -N --quiet https://www.yegor256.com/images/face-1024x1024.jpg}
+\iexec[quiet,log]{wget --no-check-certificate -N --quiet https://www.yegor256.com/images/face-1024x1024.jpg}
 
 \ifdefined\SqmEnglish
 {\sffamily{\bfseries\Large Software Quality Metrics (SQM)}
