--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -78,7 +78,7 @@
   {The application of \ul{thresholds} could lower the cost of software quality evaluation since they can reduce the amount of software code that should be inspected. Therefore, the thresholds provide a way for quantitative and qualitative evaluations to complement each other, leading to a more efficient quality \ul{assessment} of object-oriented software systems.}
   {filo2024evaluating}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.95\linewidth]{thresholds.png}
   \par\columnbreak\par
@@ -101,14 +101,14 @@
 
 \lnThought{It \ul{may} be wrong to measure productivity of a programmer by counting lines of code, but for the quality of code the LoC metric is a perfect indicator.}
 
-\plush{
+\lnPitch{
   \pptBanner{\texttt{cloc.pl}}
   \pptPic{.65}{cloc.png}\par
   \url{https://github.com/AlDanial/cloc}}
 
 \lnThought{In 2011, Uncle Bob \href{https://softwareengineering.stackexchange.com/questions/66523}{suggested} that 200 lines per Java class is a good guideline to stay below.}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{size-vs-testing.png}
   \par\columnbreak\par
@@ -141,7 +141,7 @@ NCSS = ?
 
 \lnThought{There are \href{https://www.linux.com/news/linux-in-2020-27-8-million-lines-of-code-in-the-kernel-1-3-million-in-systemd/}{27.8M} lines of C code in Linux kernel. What does it tell us?}
 
-\plush{
+\lnPitch{
   \pptBanner{Largest Open Source Projects}
   \begin{multicols}{2}
   \includegraphics[width=.8\linewidth]{largest.png}\par
