--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -53,7 +53,7 @@
   {Cyclomatic Complexity (CC) is a count of the number of decisions in the source code. The higher the count, the more complex the code. The formula is simple: \(C=E-N+2\).}
   {mccabe1976complexity}
 
-\plush{
+\lnPitch{
 \pptBanner{What is the complexity of this program?}
 \pptPic{.5}{cc.png}\par
 I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding-a-small-note-on-cyclomatic-complexity/}{here}.}
