--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -48,7 +48,7 @@
   {Cognitive complexity, the \ul{new measure} for software complexity presented in this paper, is a measure of the cognitive and psychological complexity of software as a human intelligence artifact.}
   {shao2003new}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.8\linewidth]{bcs.png}\par
   BCS stands for ``\ul{basic control structure}.''
@@ -69,7 +69,7 @@
   {We developed an improved cognitive information complexity measure (CICM) that is based on the amount of information contained in the software and encompasses all the major parameters that have a bearing on the difficulty of comprehension or cognitive complexity of software.}
   {kushwaha2006improved}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.95\linewidth]{cicm.png}\par
   \par\columnbreak\par
