--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -32,7 +32,7 @@
   {Any attempt to find a \ul{universal} set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely \ul{difficult}. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}
   {halstead1977elements}
 
-\plush{
+\lnPitch{
   \pptBanner{Inputs}
   \begin{itemize}
   \item \(\eta_1\) --- the number of distinct \ul{operators}
