--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -52,12 +52,12 @@
   {The factors of software that determine or influence maintainability can be organized into a \ul{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}
   {oman1992metrics}
 
-\plush{
+\lnPitch{
 \pptBanner{Software Maintainability Taxonomy}
 \pptPic{.6}{tree.png}\par
 {\scriptsize Source: \bibentry{oman1992metrics}\par}}
 
-\plush{
+\lnPitch{
 \pptBanner{Maintainability Formula}
 \begin{multicols}{2}
 \pptPic{.7}{formula-1.png}\par
@@ -72,7 +72,7 @@
   {A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system.}
   {coleman1994}
 
-\plush{
+\lnPitch{
 \pptBanner{First Approximation}
 \begin{multicols}{2}
 \pptPic{.95}{formula-2.png}
@@ -81,7 +81,7 @@
 \end{multicols}
 }
 
-\plush{
+\lnPitch{
 \pptBanner{The Formula of Maintainability Index}
 \begin{multicols}{2}
 \pptPic{.95}{formula-3.png}
@@ -93,7 +93,7 @@
 \end{multicols}
 }
 
-\plush{
+\lnPitch{
   \pptBanner{Maintainability Index by Visual Studio}
   \begin{multicols}{2}
   \pptPic{.95}{vs-formula.png}\par
@@ -149,7 +149,7 @@
   {The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}
   {ardito2020tool}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{metrics.png}
   \par\columnbreak\par
