--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -33,7 +33,7 @@
   {The fewer and simpler the connections between modules, the easier it is to \ul{understand} each module without reference to other modules.}
   {stevens1974structured}
 
-\plush{
+\lnPitch{
 \pptPic{.8}{coupling.png}\par
 {\scriptsize Source: \url{https://www.geeksforgeeks.org/coupling-in-java/}\par}}
 
@@ -43,7 +43,7 @@
   {Coupling is the measure of the strength of association established by a connection from one module to another. Strong coupling \ul{complicates} a system since a module is harder to \ul{understand}, \ul{change}, or \ul{correct} by itself if it is highly interrelated with other modules. Complexity can be reduced by designing systems with the weakest possible coupling between modules.}
   {stevens1974structured}
 
-\plush{
+\lnPitch{
 \pptPic{.8}{coupling-2.png}\par
 {\scriptsize Source: \url{https://www.javatpoint.com/software-engineering-coupling-and-cohesion}\par}}
 
@@ -53,7 +53,7 @@
   {The degree of coupling established by a particular connection is a function of several factors, and thus it is \ul{difficult to establish} a simple index of coupling. Coupling depends (1)~on how complicated the connection is, (2)~on whether the connection refers to the module itself or something inside it, and (3)~on what is being sent or received.}
   {stevens1974structured}
 
-\plush{
+\lnPitch{
 \pptPic{.8}{coupling-3.png}\par
 {\scriptsize Source: \url{https://nordicapis.com/the-difference-between-tight-coupling-and-loose-coupling/}\par}}
 
@@ -101,7 +101,7 @@
   {Low-to-medium \ul{fan-out} means having a given class use a low-to-medium number of other classes. High fan-out (more than about seven) indicates that a class uses a large number of other classes and may therefore be overly complex. High \ul{fan-in} refers to having a high number of classes that use a given class. High fan-in implies that a system has been designed to make good use of utility classes at the lower levels in the system.}
   {mcconnell2004code}
 
-\plush{
+\lnPitch{
 \pptPic{.95}{kokash.png}\par
 {\scriptsize (c) Natalia Kokash, Leiden Institute of Advanced Computer Science\par}}
 
@@ -127,7 +127,7 @@
   {Afferent coupling (denoted by \textbf{\textsf{Ca}}) is a metric that indicates the total number of other projects/boundaries that are dependent upon it. Efferent coupling (denoted by \textbf{\textsf{Ce}}) is another metric that is the verse of Afferent Coupling. It is the total number of projects that a given project depends on. Instability another metric that is a ratio: $\textbf{\textsf{I}} = \textbf{\textsf{Ce}} / (\textbf{\textsf{Ce}} + \textbf{\textsf{Ca}}).$ This metric is a ratio between 0 and 1. With 0 meaning it's totally stable and 1 meaning it's unstable.}
   {comartin2021}
 
-\plush{
+\lnPitch{
   \pptBanner{Types of Coupling (some of them)}
   \begin{pptWide}{2}
   \scriptsize\begin{itemize}
