--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -33,7 +33,7 @@
   {Coupling is reduced when the relationships among elements not in the same module are minimized. There are two ways of achieving this: minimizing the relationships among modules and \ul{maximizing relationships} among elements in the same module.}
   {stevens1974structured}
 
-\plush{
+\lnPitch{
 \pptPic{.8}{cohesion-1.png}\par
 {\scriptsize Source: \url{https://bootcamp.uxdesign.cc/why-product-development-and-design-needs-cohesion-coupling-87731c84aaa7}\par}}
 
@@ -56,7 +56,7 @@
     6)~Functional.}
   {stevens1974structured}
 
-\plush{
+\lnPitch{
 \pptPic{.8}{cohesion-3.png}\par
 {\scriptsize Source: \url{https://logicmojo.com/cohesion-and-coupling-in-oops}\par}}
 
@@ -179,7 +179,7 @@ int v = new SQLResult()
 \end{multicols}
 \plush{}
 
-\plush{
+\lnPitch{
 \begin{multicols}{4}
 1. Ideal \par
 \includegraphics[width=.2\textwidth]{cohesion-2.1.png} \par
@@ -365,7 +365,7 @@ class Rectangle {
 \item \href{https://github.com/yahoojapan/lcom4go}{lcom4go} for Go
 \end{itemize}}
 
-\plush{
+\lnPitch{
   \pptBanner{jPeek}
   \begin{multicols}{2}
   \includegraphics[width=6em]{jpeek-logo.png}\par
