--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -51,7 +51,7 @@
   {We define two measures of class cohesion based on the \ul{direct} and \ul{indirect} connections of method pairs: TCC and LCC.}
   {bieman1995cohesion}
 
-\plush{
+\lnPitch{
   \pptBanner{Connectivity Between Methods in a Class}
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{connectivity.png}
@@ -131,7 +131,7 @@ var file = {
   {Isomorphism of the modules (objects) in problem and solution space is a desirable, in fact essential, quality for software.}
   {west2004object}
 
-\plush{
+\lnPitch{
   \pptBanner{Inheritance vs. Cohesion}
   \begin{multicols}{2}
   \includegraphics[width=.9\columnwidth]{graphs.png}
