--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -29,7 +29,7 @@
 
 \plush{\lnTitlePage{10}{24}{jdEFoz-OQ44}}
 
-\plush{
+\lnPitch{
 \pptBanner{Object Metrics}
 \begin{itemize}
   \setlength\itemsep{0em}
