--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -135,7 +135,7 @@ void sayHello(int id) {
   {Two lines of code are considered to be identical if they contain the same \ul{sequence of characters} after removing comments and white space; the \ul{semantics} of the program statements are not analyzed.}
   {baker1993}
 
-\plush{
+\lnPitch{
   \pptBanner{Up to 38\% of lines are involved in duplicates}
   \begin{multicols}{2}
   \includegraphics[width=.9\columnwidth]{scatter.png}
@@ -253,12 +253,12 @@ More than one code segments that are functionally similar but implemented by dif
 \end{multicols}
 \plush{}
 
-\plush{
+\lnPitch{
   \pptBanner{Clones in Linux Kernel}
   \pptPic{.9}{clones.png}\par
   \lnSource{casazza2001identifying}}
 
-\plush{
+\lnPitch{
   \pptBanner{Methods of clone detection:}
   \begin{enumerate}
     \item Using text
@@ -276,7 +276,7 @@ More than one code segments that are functionally similar but implemented by dif
   {For the three Java systems studied, the following results were found: 1)~cloned code is usually \ul{older} than non-cloned code, 2)~cloned code in a file is usually older than the non-cloned code in the same file. Both results suggest that cloned code is \ul{more stable} than non-cloned code.}
   {krinke2011}
 
-\plush{
+\lnPitch{
   \pptBanner{These tools can help detecting duplicate code:}
   \begin{enumerate}
     \item IntelliJ IDEA by JetBrains
@@ -288,7 +288,7 @@ More than one code segments that are functionally similar but implemented by dif
 
 \plush{\pptBanner{Simian 4.0.0}\includegraphics[width=.9\textwidth]{simian.png}}
 
-\plush{
+\lnPitch{
   \pptBanner{How Effective LLMs Are?}
   \begin{multicols}{2}
   \includegraphics[width=.9\columnwidth]{gpt-recall.png}
