--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -132,7 +132,7 @@ Delta: \textcolor{green}{+3} / 0, Churn: \textcolor{green}{+7} / \textcolor{red}
   {Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \ul{defect density}.}
   {nagappan2005use}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{turnover.png}
   \par\columnbreak\par
