--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -146,12 +146,12 @@ assert fibonacci(10) == 55;
 \end{pptWide}
 \plush{}
 
-\plush{
+\lnPitch{
 \pptBanner{Break-and-Fix Cycle}
 \includegraphics[width=.7\textwidth]{time-and-mess-diagram.png}\par
 \lnSource{bugayenko2014blog0412}}
 
-\plush{
+\lnPitch{
 \pptBanner{\texttt{www.0pdd.com}}
 \includegraphics[width=.8\textwidth]{0pdd-front.png}}
 
@@ -170,12 +170,12 @@ assert fibonacci(10) == 55;
 \path (coder2) edge[dashed] (git);
 \end{tikzpicture}}
 
-\plush{
+\lnPitch{
 \pptBanner{250+ Puzzles in \texttt{objectionary/eo}}
 \includegraphics[width=.6\textwidth]{0pdd-screenshot.png}\par
 {\small Source: \url{https://www.0pdd.com/p?name=objectionary/eo}\par}}
 
-\plush{
+\lnPitch{
 \pptBanner{Sample Ticket Submitted by 0pdd.com to \texttt{objectionary/eo}}
 \includegraphics[width=.6\textwidth]{ticket.png}\par
 {\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
