--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -143,7 +143,7 @@ assert foo(50) == 42;
   {However, only half regularly document their test designs, only half regularly save their tests for reuse after software changes, and an extremely small five percent provide regular \ul{measurements} of code coverage.}
   {gelperin1988}
 
-\plush{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{practices.png}
   \par\columnbreak\par
