--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -130,7 +130,7 @@
   {The reliability of function point analysis is good enough to allow function points to serve as the \ul{basis} for contracts, for carrying out scholarly research, for cost estimating, and for creating reliable benchmarks. In fact, function points are now \ul{used} for more business purposes than any other metric in the history of software.}
   {iso20926foreword}
 
-\plush{
+\lnPitch{
 \pptBanner{IFPUG Procedure}
 \includegraphics[width=\linewidth]{ifpug-procedure.png}
 \par
